--- a/hello.html
+++ b/hello.html
@@ -4,18 +4,7 @@
 </head>
 
 <body>
-<from>
-<fieldset>
-<legend>enter the date and no of days u want to travel:</legend>
-<input type="date" name="day">
-number of days: <input type="number" name="numdate" min="1" max="10">
-<br><br>
-name:<input type="text">
-
-</filedset>
-
-
-</form>
+<p>strat fesh</p>
 </body>
 
 </html>
